--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "rewrites": [
-    { "source": "/", "destination": "/api" },
-    { "source": "/plan", "destination": "/api/plan" },
-    { "source": "/row", "destination": "/api/row" },
-    { "source": "/static/:path*", "destination": "/api/static/:path*" }
+  "functions": {
+    "api/index.py": { "runtime": "python3.11" },
+    "api/*.js": { "runtime": "nodejs20.x" }
+  },
+  "routes": [
+    { "src": "^/api/suggest-ai$", "dest": "/api/suggest-ai.js" },
+    { "src": "^/api/extract$", "dest": "/api/extract.js" },
+    { "src": "^/static/(.*)$", "dest": "/api/index.py" },
+    { "src": "^(?!/api/).*", "dest": "/api/index.py" }
   ]
 }
-
