--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,13 @@
 {
+  "version": 2,
   "functions": {
-    "api/index.py": { "runtime": "python3.11" },
-    "api/*.js": { "runtime": "nodejs20.x" }
+    "api/index.py": { "runtime": "vercel-python@3.11", "maxDuration": 10, "memory": 1024 }
   },
-  "routes": [
-    { "src": "^/api/suggest-ai$", "dest": "/api/suggest-ai.js" },
-    { "src": "^/api/extract$", "dest": "/api/extract.js" },
-    { "src": "^/static/(.*)$", "dest": "/api/index.py" },
-    { "src": "^(?!/api/).*", "dest": "/api/index.py" }
+  "rewrites": [
+    { "source": "/api/suggest-ai", "destination": "/api/suggest-ai.js" },
+    { "source": "/api/extract", "destination": "/api/extract.js" },
+    { "source": "/static/(.*)", "destination": "/api/index.py" },
+    { "source": "/(.*)", "destination": "/api/index.py" }
   ]
 }
+
